Added LaMoTO dependency oops.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,5 +30,6 @@ dependencies = [
 [project.optional-dependencies]
 github = [
     "tktkt[github] @ git+https://github.com/bauwenst/TkTkT",
-    "fiject        @ git+https://github.com/bauwenst/fiject"
+    "fiject        @ git+https://github.com/bauwenst/fiject",
+    "lamoto        @ git+https://github.com/bauwenst/LaMoTO"
 ]
